--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "license": "MIT",
   "scripts": {
     "dev": "tsnd --transpile-only --ignore-watch node_modules --respawn src/server.ts",
-    "start": "node dist/server.js",
+    "start": "node dist/src/server.js",
     "knex:migrate:dev": "knex --knexfile knexfile.ts migrate:latest",
     "knex:migrate:prod": "knex --knexfile knexfile.js migrate:latest",
     "knex:migrate:rollback": "knex --knexfile knexfile.ts migrate:rollback"
